--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,11 +1,11 @@
 // src/styles/components/_card.scss
 @layer components {
   .card {
-    @apply mx-auto w-full rounded-2xl bg-slate-950 bg-opacity-100 p-6 text-xs text-slate-300 shadow;
+    @apply mx-auto w-full rounded-2xl bg-slate-950 p-6 text-xs shadow;
     // background: rgba(255, 255, 255, 0.05);
     // border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
+    // backdrop-filter: blur(5px);
     // -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.1);
   }
