--- a/src/styles/utilities/_animation.scss
+++ b/src/styles/utilities/_animation.scss
@@ -1,3 +1,29 @@
+.fade-in {
+  animation: fadeIn 0.3s forwards;
+}
+
+.fade-out {
+  animation: fadeOut 0.3s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .bg-animate {
   background: linear-gradient(270deg, #0f0e22, #170a37, #130c58, #31044e, #0f0e22);
   background-size: 1000% 1000% !important;
